@@ -1,3 +1,7 @@
+2000-06-04  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Tile-scrolling starting to work.
+
 2000-06-03  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.cc: read_map_data() pulls in superchunks.
